# todo-pipeline-orch

./: .envrc  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SPEC.md  TODOS-archive.md  TODOS.md  VERSION  main.py  pyproject.toml
.serena/: project.yml
configs/: phases.yaml
docs/: ARCHITECTURE.md  checklist-harness-production-coverage.md  explanation-circuit-breaker.md  explanation-multi-project-scan.md  explanation-pipeline-contract.md  explanation-skill-test-harness-design.md  hermes-state-machine.md  howto-agent-skills-profile.md  howto-approve-and-ship.md  howto-approve-plan-gate.md  howto-config-toml.md  howto-debugging-and-recovery.md  howto-eval-suite.md  howto-hermes-adapter.md  howto-kill-stuck-phase.md  howto-mock-integration-test-harness.md  howto-multi-project-setup.md  howto-pipeline-contract.md  howto-pipeline-profile.md  howto-pipeline-tick.md  howto-prompt-sha-mismatch.md  howto-review-outcomes.md  howto-skill-test-environment.md  howto-todos-manager.md  howto-troubleshoot-state-migration.md  pipeline-modularization-plan.md  reference-cli.md  reference-counter.md  reference-decision-api.md  reference-kanban-as-scheduler.md  reference-skill-test-harness.md  tutorial-getting-started.md  tutorial-multi-project-scan.md  tutorial-todos-manager.md
hermes-pipeline/: README.md  pyproject.toml
hermes-pipeline/configs/: phases.yaml
hermes-pipeline/scripts/: install-cron.sh
hermes-pipeline/src/hermes_pipeline/: __init__.py  circuit.py  cli.py  config.py  kanban.py  phases.py  selection.py  state.py  status.py  tick.py  watcher.py
hermes-pipeline/src/hermes_pipeline/decision/: README.md  __init__.py  agent.py  context.py  store.py
hermes-pipeline/tests/: test_cli.py  test_cli_kill.py  test_decision_agent.py  test_decision_context.py  test_decision_run.py  test_decision_schema.py  test_decision_store.py  test_logging_setup.py  test_merge.py  test_phases_invoke.py  test_phases_marker.py  test_runner.py  test_selection.py  test_slack.py  test_state_outcomes.py  test_tick_lock.py  test_watcher.py
hermes-pipeline/tests/eval/: runner.py
hermes-pipeline/tests/eval/selection/: clean_strict.md  empty_todos.md  outcome_aware_avoids_failed.md
hermes-pipeline/tests/regression/: test_phase9_merge.py
hermes_pipeline/: __init__.py  approve_plan.py  circuit.py  cli.py  config.py  contract.py  counter.py  gate_state.py  gates.py  harness.py  hermes_adapter.py  kanban.py  kanban_tasks.py  logging_setup.py  merge.py  outcomes.py  phases.py  project_config.py  review_phase.py  runner.py  ship.py  slack.py  state.py  state_migration.py  test_report.py  todos_md.py  watcher.py
scripts/: install-cron.sh  install-todos-manager.sh
tasks/: plan.md  todo.md
tests/: conftest.py  skill_test_environment  test_approve_cli.py  test_approve_plan.py  test_chaos.py  test_circuit.py  test_cli.py  test_cli_contract.py  test_cli_entrypoint.py  test_cli_kill.py  test_config.py  test_config_toml.py  test_contract.py  test_counter.py  (+33 more)
(+119 files in other folders)
