[project]
name = "todo-pipeline-orchestrator"
version = "0.1.0"
description = "Pipeline watcher and TODOS manager orchestration toolkit"
requires-python = ">=3.12"
dependencies = [
    "hermes-pipeline",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[tool.uv.sources]
hermes-pipeline = { path = "hermes-pipeline", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
