[project]
name = "hermes-pipeline"
version = "0.1.0"
description = "Autonomous TODOS.md pipeline orchestrator (selection, kanban, merge-gating)"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
pipeline-watch = "hermes_pipeline.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_pipeline"]
