[project]
name = "hermes-pipeline"
version = "0.2.0"
description = "Autonomous TODOS.md pipeline orchestrator (Hermes-agent selection, kanban, merge-gating)"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "anthropic>=0.40",
    "python-ulid>=2.2",
]

[project.scripts]
pipeline-watch = "hermes_pipeline.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_pipeline"]

[tool.pytest.ini_options]
python_files = ["test_*.py", "runner.py"]
testpaths = ["tests"]
